--- a/ExUn2Tienda.css
+++ b/ExUn2Tienda.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(281deg, rgba(71,15,15,1) 0%, rgba(157,7,7,1) 100%);;
 }
 
-#Nombrepag {
+#NombrePag {
     text-align: center;
     font-size: 82px;
     font-family: "Secular One";
@@ -10,14 +10,14 @@ body {
     color:rgb(255, 255, 255);
 }
 
-#Subtitulopag {
+#SubtituloPag {
     text-align: center;
     font-size: 24px;
     font-family: "Kulim Park";
     color:rgb(255, 255, 255);
 }
 
-#Tablaproductos {
+#TablaProductos {
     text-align: center;
     font-size: 20px;
     font-family: "Kulim Park";
@@ -27,7 +27,7 @@ body {
     border: 2px solid rgb(255, 255, 255);
     color: rgb(255, 255, 255);
 }
-#boton1, #boton2, #boton3, #boton4, #boton5 {
+#Boton1, #Boton2, #Boton3, #Boton4, #Boton5 {
     text-align: center;
     font-size: 20px;
     border: 2px solid rgb(255, 255, 255);
@@ -35,7 +35,7 @@ body {
     background-color:transparent;
 }
 
-#boton1:active, #boton2:active, #boton3:active, #boton4:active, #boton5:active {
+#Boton1:active, #Boton2:active, #Boton3:active, #Boton4:active, #Boton5:active {
     text-align: center;
     font-size: 20px;
     border: 2px solid rgb(255, 255, 255);
@@ -43,7 +43,7 @@ body {
     background-color:rgb(255, 255, 255)
 }
 
-#Tablacarro {
+#TablaCarro {
     text-align: center;
     font-size: 20px;
     font-family: "Kulim Park";
