--- a/ExUn2Tienda.css
+++ b/ExUn2Tienda.css
@@ -7,14 +7,14 @@ body {
     font-size: 82px;
     font-family: "Secular One";
     font-weight: bolder;
-    color:rgb(255, 255, 255);
+    color: rgba(255, 255, 255);
 }
 
 #SubtituloPag {
     text-align: center;
     font-size: 24px;
     font-family: "Kulim Park";
-    color:rgb(255, 255, 255);
+    color: rgba(255, 255, 255);
 }
 
 #TablaProductos {
@@ -24,23 +24,23 @@ body {
     width: 800px;
     height: 100px;
     border-collapse: collapse;
-    border: 2px solid rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
+    border: 2px solid rgba(255, 255, 255);
+    color: rgba(255, 255, 255);
 }
 #Boton1, #Boton2, #Boton3, #Boton4, #Boton5 {
     text-align: center;
     font-size: 20px;
-    border: 2px solid rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
+    border: 2px solid rgba(255, 255, 255);
+    color: rgba(255, 255, 255);
     background-color:transparent;
 }
 
 #Boton1:active, #Boton2:active, #Boton3:active, #Boton4:active, #Boton5:active {
     text-align: center;
     font-size: 20px;
-    border: 2px solid rgb(255, 255, 255);
+    border: 2px solid rgba(255, 255, 255);
     color: transparent;
-    background-color:rgb(255, 255, 255)
+    background-color: rgba(255, 255, 255)
 }
 
 #TablaCarro {
